--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 						<li><a href="mailto: pavansathwik01@gmail.com" class="icon solid alt fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; COPYRIGHT PAVAN SATHWIK @2022-All RIGHTS RESERVED.</li>
 					</ul>
 				</footer>
 
